css/grayscale.scss
---
---

@import "variables";
@import "mixins";

/*!
 * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
    color: $font-color;
    background-color: $primary-color;
}

html {
    width: 100%;
    height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    letter-spacing: 1px;
}

/* Added in { Personal } */
h4 {
    a.category {
        color: inherit;
    }

    a.tag {
        font-size: 12px;
    }
}

p {
    margin: 0 0 25px;
    font-size: 18px;
    line-height: 1.5;
    @media(min-width:768px) {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.6;
    }
}

div {
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  -o-user-select: text;
  user-select: text;
}

a {
    color: $secondary-color;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    &:hover,
    &:focus {
        text-decoration: none;
        color: darken($secondary-color,20%);
    }
}

.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba($font-color, 0.3);
    text-transform: uppercase;
    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: $navbar-sm-background-color;

    /* Fix height limit and scroll for small screen and many items menu */
    max-height: 100%;
    overflow-y: auto;

    #logo_nav {
        height: 30px;
        margin-top: -5px;
        border-radius: 100%;
    }

    .navbar-toggle {
        padding: 4px 6px;
        font-size: 16px;
        color: $navbar-color;
        &:focus,
        &:active {
            outline: none;
        }
    }
    .navbar-brand {
        font-weight: 700;
        &:focus {
            outline: none;
        }
    }
    a {
        color: $navbar-color;
        @if $header-text-shadow{
            text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
        }
    }
    .nav {
        text-align: center;
        li {
            a {
                -webkit-transition: background .3s ease-in-out;
                -moz-transition: background .3s ease-in-out;
                transition: background .3s ease-in-out;
                &:hover {
                    /* color: rgba($font-color, 0.8); */
                    outline: none;
                    background-color: rgba($font-color, 0.3);
                }
                &:focus,
                &:active {
                    outline: none;
                      background-color: rgba($font-color, 0.3);
                }
            }
            &.active {
                outline: none;
                a {
                    background-color: rgba($font-color, 0.3);
                    &:hover {
                        color: $navbar-color;
                    }
                }
            }
        }
    }
    @media(min-width:768px) {
        #logo_nav {
           height: 50px;
           -webkit-transition: height .5s ease-in-out,padding .5s ease-in-out;
           -moz-transition: height .5s ease-in-out,padding .5s ease-in-out;
           transition: height .5s ease-in-out,padding .5s ease-in-out;
        }
        padding: 20px 0;
        border-bottom: none;
        letter-spacing: 1px;
        background: $navbar-lg-background;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
        &.top-nav-collapse {
            padding: 0;
            background: $navbar-lg-collapse-background-color;
            border-bottom: 1px solid rgba($font-color, 0.3);

	    #logo_nav {
              height: 30px;
              margin-top: -5px;
            }
        }
    }
}

.intro {
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
    text-align: center;
    color: $intro-text-color;
    {% if site.background-img %}
    background: url({{ site.background-img }}) no-repeat top center scroll;
    {% endif %}
    background-color: $header-background-color;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    .intro-body {
        display: table-cell;
        vertical-align: middle;
        .brand-heading {
            font-size: 40px;
        }
        .intro-text {
            font-size: 18px;
            @if $navbar-text-shadow {
                text-shadow: 1px 0 1px #000;
            }
        }
    }
    @media(min-width:768px) {
        height: 100%;
        padding: 0;
        .intro-body {
            .brand-heading {
                font-size: 100px;
            }
            .intro-text {
                font-size: 26px;
            }
        }
    }
}

@-webkit-keyframes pulse {
    from {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {
    from {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.content-section {
    margin-top: 100px;
    padding-top: 100px;
    @media(min-width:767px) {
        margin-top: 125px;
        padding-top: 125px;
    }
    /* Added in { Personal } for responsive images in posts and section contents */
    img {
        display: block;
        max-width: 100%;
        height: auto;
        margin: 0 auto;
        border: 1px solid $font-color;
    }
    /* Added in { Personal } */
    ul,
    ol {
        text-align: center;
        margin: 0 0 25px;
        font-size: 18px;
        line-height: 1.5;
        list-style-position: inside;
    }
    pre {
      padding: 0;
      > code {
        text-align: left;
      }
    }
    img.emoji {
      /* Override any img styles to ensure Emojis are displayed inline */
      margin: 0px !important;
      display: inline !important;
      border: 1px solid $primary-color !important;
    }

    /* Added in { Personal } */
    &#post {
        div.author img {
            border: 0px;
            margin-bottom: 20px;
            padding: 4px;
            border-radius: 100%;
        }
    }
}

.btn {
    border-radius: 0;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid $secondary-color;
    color: $secondary-color;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid $secondary-color;
    outline: 0;
    color: #000;
    background-color: $secondary-color;
}

/* Added in { Personal } */
ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: $social-buttons-color;
    background-color: #222;

    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;

    &:hover,
    &:focus,
    &:active {
        color: #222;
        background-color: darken($social-buttons-color, 10%);
    }
}

footer {
    padding: 50px 0;
    text-align: center;
    p {
        margin: 0;
    }
}

::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba($font-color, 0.2);
}

::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba($font-color, 0.2);
}

img::selection {
    background: transparent;
}

img::-moz-selection {
    background: transparent;
}

body {
    -webkit-tap-highlight-color: rgba($font-color, 0.2);
}

/* Added in { Personal } for Typed Cursor in Header */
.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
    font-size: 16px;
    vertical-align: top;
    @media(min-width:768px) {
        font-size: 22px;
    }
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
/* END Added in { Personal } for Typed Cursor in Header */

/* Animation for hand-swipe */
@-webkit-keyframes swipe {
    from {
        left: 5%;
    }
     to {
         left: -5%;
     }
 }

 @-moz-keyframes swipe {
     from {
         left: 5%;
     }
     to {
         left: -5%;
     }
 }
 /* END Animation for hand-swipe */

 /* Style for swipe instruction section */
 #swipe-instruction {
     display: none;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     min-height: 100%;
     top: 0;
     right: 0;
     left: 0;
     z-index: 1;
      > div {
         background-color: rgba(20, 20, 20, 0.6);
         padding: 10px;
         @media(min-width:768px) {
           padding: 20px 0;
         }
         #hand-swipe {
            @media(min-width:992px) {
              font-size: 100px;
            }
            font-size: 80px;
             display: block;
             position: relative;
             animation: swipe ease-in-out 1s alternate infinite;
         }
     }
 }

.ok-btn {
  background-color: $primary-color;
  color: $secondary-color;
}

 /* END Style for swipe instruction section */

.fourofour {
  border: 1px solid $primary-color !important;
}

